--- a/css/main.css
+++ b/css/main.css
@@ -3,20 +3,25 @@ html {
     /* background-size: cover; *\/ */
 }
 body {
+    -webkit-appearance: none;
     margin: 5% 10% 5% 10%;
     padding: 1% 2% 1% 2%;
     font-family: Helvetica, Arial;
     color: black;
-    border: 3px solid black; */
+    border: 3px solid black;
     overflow-x: scroll;
     border-radius: 3em;
 }
 /* WALL */
+input {
+   -webkit-appearance: none;
+}
 .wall {
     margin: 10% 5% 20% 5%;
 }
 .form-group {
     margin-top: 10%;
+    -webkit-appearance: none;
 }
 label {
     font-weight: bold;
