--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
     border: 3px solid black;
     overflow-x: scroll;
     border-radius: 3em;
+    min-height: 360px;
 }
 /* WALL */
 input {
