--- a/css/main.css
+++ b/css/main.css
@@ -58,15 +58,22 @@ ul {
     padding: 0;
 }
 .address{
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
 .nom {
     font-size: 14px;
     font-weight: bold;
 }
 .badge {
-    padding: 4px;
+    padding: 5 10 5 10px;
     margin: 5px;
+}
+#addfilter, .filter.badge {
+    padding: 10px;
+    cursor:pointer;
+}
+.filter.badge:after {
+    content:"  X";
 }
 .where {
     font-style: italic;
@@ -100,16 +107,21 @@ ul {
 
 /* Colors of Badge */
 .restaurant {
-    color: #fff;
-    background-color:#169f84;
+    color: #212529;
+    background-color:#1abb9b;
+    letter-spacing: 0.2px;
 }
 .bar {
     color: #fff;
     background-color: #9a59b5;
 }
 .café {
+    color: #fff;
+    background-color: #d25400;
+}
+.boulangerie {
     color: #212529;
-    background-color: #ffc107;
+    background-color: #f0c30f;    
 }
 .apps {
     color: #fff;
@@ -120,6 +132,16 @@ ul {
     color: #2c3e50;
     background-color: #fff;
     border: 1px solid #2c3e50;
+}
+.subcategory {
+    color: #fff;
+    font-size: 75%;
+    background-color: #2c3e50;
+    border-radius: 1rem;
+    padding: 0.25em 0.6em 0.25em 0.6em;
+    font-style: italic;
+    font-weight: normal;
+    margin-right: 5px;
 }
 /* Manage Filters */
 .delete {
@@ -153,6 +175,12 @@ li.badge {
 }
 .fas {
     padding-right: 1em;
+}
+.nom .fas {
+    padding: 0.4em ;
+}
+.fa-euro-sign {
+    padding: 0 !important;
 }
 .mapboxgl-popup-close-button {
     color:white;
